--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/actions/generate/GroovyCodeInsightBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/actions/generate/GroovyCodeInsightBundle.properties
@@ -5,3 +5,5 @@ generate.equals.compare.nested.arrays.comment= // Compare nested arrays - values
 generate.equals.compare.arrays.comment= // Probably incorrect - comparing Object[] arrays with Arrays.equals
 generate.property.missing.already.defined.warning=propertyMissing() already defined
 generate.property.missing.already.defined.title=propertyMissing() Already Defined
+generate.method.missing.already.defined.warning=methodMissing() already defined
+generate.method.missing.already.defined.title=methodMissing() Already Defined
