IDEA-92158 (Add inspection to report 'Arrays.asList' calls with one argument)

--- a/plugins/InspectionGadgets/src/META-INF/plugin.xml
+++ b/plugins/InspectionGadgets/src/META-INF/plugin.xml
@@ -1790,6 +1790,10 @@
                       implementationClass="com.siyeh.ig.packaging.PackageWithTooFewClassesInspection"/>
 
     <!--group.names.performance.issues-->
+    <localInspection language="JAVA" shortName="ArraysAsListWithZeroOrOneArgument" bundle="com.siyeh.InspectionGadgetsBundle"
+                     key="arrays.as.list.with.zero.or.one.argument.display.name" groupBundle="messages.InspectionsBundle"
+                     groupKey="group.names.performance.issues" enabledByDefault="false" level="WARNING"
+                     implementationClass="com.siyeh.ig.performance.ArraysAsListWithZeroOrOneArgumentInspection"/>
     <localInspection language="JAVA" suppressId="BooleanConstructorCall" shortName="BooleanConstructor" bundle="com.siyeh.InspectionGadgetsBundle"
                      key="boolean.constructor.display.name" groupBundle="messages.InspectionsBundle"
                      groupKey="group.names.performance.issues" enabledByDefault="true" level="WARNING"
