'Convert type cast to safe cast' intention

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -192,3 +192,5 @@ gr.make.member.protected.intention.name=Make 'protected'
 gr.make.member.protected.intention.family.name=Make 'protected'
 convert.multiline.string.to.single.line.intention.name=Convert to single-line
 convert.multiline.string.to.single.line.intention.family.name=Convert multiline string to single-line
+gr.convert.type.cast.to.safe.cast.intention.name=Convert to safe cast
+gr.convert.type.cast.to.safe.cast.intention.family.name=Convert cast expression to safe cast expression
