IDEA-61374 Groovy: Extract Method Refactoring applied to block of code with "category" syntax

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
@@ -171,3 +171,4 @@ selected.expression.should.not.be.lvalue=Selected expression should not be left 
 column.name.use.any.var=Use any var
 rename.groovy.method=Rename Groovy method
 cannot.inline.0.=Cannot inline {0}
+ref.0.will.not.be.resolved.outside.of.current.context=Reference ''{0}'' will not be resolved outside of current context
