moved to rich platform

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -717,7 +717,7 @@ label.select.module.type=Module type:
 error.please.specify.path.to.module.file=Please specify path to {0} module file (.iml)
 title.module.file.path.not.specified=Module File Path Not Specified
 error.module.file.does.not.exist=The specified path to module file does not exist
-title.module.file.does.not.exist=Module File Does Not Exist
+title.module.file.does.not.exist=Module file does not exist: {0}
 error.module.not.iml=The \"{0}\"\nis not an {1} module file (.iml)
 title.incorrect.file.type=Incorrect File Type
 button.stop.searching=&Stop Searching
