--- a/plugins/tasks/tasks-core/src/META-INF/plugin.xml
+++ b/plugins/tasks/tasks-core/src/META-INF/plugin.xml
@@ -45,6 +45,7 @@
       </action>
       <action id="context.load" class="com.intellij.tasks.actions.context.LoadContextAction" text="_Load Context...">
         <keyboard-shortcut keymap="$default" first-keystroke="alt shift L"/>
+        <keyboard-shortcut keymap="$Mac OS X" first-keystroke="alt shift L" remove="true"/>
       </action>
       <action id="context.clear" class="com.intellij.tasks.actions.context.ClearContextAction" text="_Clear Context">
         <keyboard-shortcut keymap="$default" first-keystroke="alt shift X"/>
