When SVN authentication is failed, suggest to clear authentication cache or change configuration directory right in the error message for IDEA-92220 "Click to fix" link doesn't work if invalid SVN credentials was entered

--- a/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
+++ b/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
@@ -154,6 +154,7 @@ status.group.name.locked=Locked
 checkbox.configure.use.system.default.configuration.directory=&Use system default Subversion configuration directory
 label.configuration.configuration.directory=Subversion configuration &directory:
 dialog.title.select.configuration.directory=Select Configuration Directory
+action.title.select.configuration.directory=Change Configuration Directory
 dialog.description.select.configuration.directory=Select Subversion configuration directory or create new one
 button.text.clear.authentication.cache=&Clear Auth Cache
 label.text.delete.stored.credentials=Delete all stored credentials for 'http', 'svn' and 'svn+ssh' protocols
