Mnemonics and layout fix in Create Patch dialog; cleanup

--- a/platform/platform-resources-en/src/messages/VcsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VcsBundle.properties
@@ -323,9 +323,7 @@ changes.action.rollback.text=Rollback
 changes.action.rollback.description=Rollback changes
 changes.action.setdefaultchangelist.text=Set Active Changelist
 changes.action.setdefaultchangelist.description=Set changelist to which new changes are placed by default
-create.patch.file.name.field=&Patch file name:
-create.patch.commit.action.text=Create Patc_h...
-create.patch.commit.action.description=Creates a patch from the selected changes
+patch.apply.file.name.field=&Patch file name:
 create.patch.commit.action.title=Create Patch
 create.patch.error.title=Error creating patch: {0}
 patch.apply.dialog.title=Apply Patch
@@ -424,7 +422,10 @@ changes.remove.active.prompt=Select the changelist to which the changes should b
 changes.remove.active.empty.prompt=Select the changelist to make active:
 changes.remove.active.title=Delete Active Changelist
 create.patch.loading.content.progress=Loading content revisions
-create.patch.reverse.patch.checkbox=&Reverse patch
+create.patch.reverse.checkbox=&Reverse patch
+create.patch.base.revision=&Include base revision text(s) into patch file
+create.patch.file.path=&Patch file:
+create.patch.encoding=Encoding:
 committed.changes.refresh.progress=Refreshing VCS history
 cache.settings.dialog.title=VCS History Cache Settings
 diff.commit.message.title=Commit Message
@@ -555,7 +556,6 @@ line.annotation.aspect.author=Author
 line.annotation.aspect.date=Date
 line.annotation.aspect.revision=Revision
 annotation.commit.number=Commit number
-create.patch.file.path=&Patch file:
 todo.handler.only.skipped=<html><body>TODO check has skipped {0,choice, 0#|1#one file|2#{0} files}.<br/>\n\
 No new, edited, or located in changed fragments TODO items found.</body></html>
 todo.handler.only.added=<html><body><b>There {0,choice, 0#|1#was one|2#were {0}} added or edited TODO {0,choice, 0#|1#item|2#items} found.</b><br/>\
