redo "Pointless boolean expression" inspection and remove double negation checking which is already reported by another inspection

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1327,7 +1327,7 @@ negated.if.else.ignore.negated.null.option=Ignore '!= null' comparisons
 negated.if.else.ignore.negated.zero.option=Ignore '!= 0' comparisons
 negated.if.else.invert.quickfix=Invert If Condition
 overly.complex.boolean.expression.max.terms.option=Maximum number of terms:
-pointless.boolean.expression.ignore.option=Ignore named constant in determining pointless expressions
+pointless.boolean.expression.ignore.option=Ignore named constants in determining pointless expressions
 simplifiable.conditional.expression.problem.descriptor=<code>#ref</code> can be simplified to ''{0}'' #loc
 simplifiable.if.statement.problem.descriptor=<code>#ref</code> statement can be replaced with ''{0}'' #loc
 switch.statement.density.min.option=Minimum density of branches: %
