--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -95,3 +95,5 @@ method.may.be.static.ignore.empty.method.option=Ignore empty methods
 have.instance.refs.in.closure=(have instance references inside closure)
 method.may.be.static.ignore.instance.refs.in.closure.option=Ignore instance references inside closures
 ignore.boolean.expressions=Ignore unassigned variables in boolean checks
+highlight.if.groovy.object.methods.overridden=Highlight references from class which overrides invokeMethod(), getProperty(), or setProperty()
+highlight.if.missing.methods.declared=Highlight references from class which declares missingMethod() or missingProperty()
