--- a/plugins/hg4idea/resources/org/zmlx/hg4idea/HgVcsMessages.properties
+++ b/plugins/hg4idea/resources/org/zmlx/hg4idea/HgVcsMessages.properties
@@ -106,6 +106,7 @@ hg4idea.progress.pull.with.update=Updating repository
 hg4idea.error.invalidTarget=Invalid integration target
 hg4idea.status.currentSituationtext=<html><b>{0}</b><em>({1})</em></html>
 hg4idea.status.currentSituation.description=<html>Current mercurial branch and parents of the working directory</html>
+hg4idea.progress.checking.ignored=Checking for ignoring files
 hg4idea.warning.no-default-update-path=Skipped \"{0}\". No default update path.
 hg4idea.merge.please-commit=Merged heads, please commit repository \"{0}\"
 hg4idea.error.invalidExecutable=\"{0}\" is not a valid mercurial executable
