--- a/plugins/hg4idea/resources/org/zmlx/hg4idea/HgVcsMessages.properties
+++ b/plugins/hg4idea/resources/org/zmlx/hg4idea/HgVcsMessages.properties
@@ -104,8 +104,8 @@ hg4idea.progress.pull.with.rebase=Rebasing patches
 hg4idea.progress.pull.with.update=Updating repository
 
 hg4idea.error.invalidTarget=Invalid integration target
-hg4idea.status.currentSituationtext=<html><b>{0}</b><em>({1})</em></html>
-hg4idea.status.currentSituation.description=<html>Current mercurial branch and parents of the working directory</html>
+hg4idea.status.currentSituationText={0} ({1})
+hg4idea.status.currentSituation.description=Current mercurial branch and parents of the working directory
 hg4idea.progress.checking.ignored=Checking for ignoring files
 hg4idea.warning.no-default-update-path=Skipped \"{0}\". No default update path.
 hg4idea.merge.please-commit=Merged heads, please commit repository \"{0}\"
