--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -97,3 +97,5 @@ method.may.be.static.ignore.instance.refs.in.closure.option=Ignore instance refe
 ignore.boolean.expressions=Ignore unassigned variables in boolean checks
 highlight.if.groovy.object.methods.overridden=Highlight references from class which overrides invokeMethod(), getProperty(), or setProperty()
 highlight.if.missing.methods.declared=Highlight references from class which declares missingMethod() or missingProperty()
+gr.package.inspection.check.scripts=Check scripts
+gr.package=Package mismatch
