Groovy: smarter annotation name value pair parsing

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -332,3 +332,4 @@ native.methods.cannot.have.body=Native methods cannot have body
 top.level.class.maynot.have.private.modifier=Top level class may not have 'private' modifier
 top.level.class.maynot.have.protected.modifier=Top level class may not have 'protected' modifier
 property.missing=propertyMissing
+attribute.name.expected=Attribute name expected
