--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1337,6 +1337,7 @@ switch.statement.with.too.few.branches.problem.descriptor='<code>#ref</code>' ha
 switch.statement.without.default.ignore.option=Ignore if all cases of an enumerated type are covered
 unnecessary.label.remove.quickfix=Remove label
 unnecessary.return.problem.descriptor=<code>#ref</code> is unnecessary as the last statement in a 'void' method #loc
+unnecessary.return.constructor.problem.descriptor=<code>#ref</code> is unnecessary as the last statement in a constructor #loc
 unused.label.remove.quickfix=Remove unused label
 unnecessarily.qualified.static.usage.problem.descriptor=Unnecessarily qualified static method call <code>#ref()</code> #loc
 unnecessarily.qualified.static.usage.problem.descriptor1=Unnecessarily qualified static access <code>#ref</code> #loc
@@ -1945,7 +1946,7 @@ parameter.of.concrete.class.option=Ignore parameters whose type is abstract clas
 static.variable.of.concrete.class.option=Ignore static fields whose type is an abstract class
 class.only.used.in.one.package.display.name=Class only used from one other package
 class.only.used.in.one.package.problem.descriptor=Class <code>#ref</code> has only dependencies on and/or dependents in package ''{0}'' #loc
-unnecessary.return.option=Ignore in then branch branch of 'if' statement with 'else' branch
+unnecessary.return.option=Ignore in then branch of 'if' statement with 'else' branch
 usage.of.obsolete.assert.display.name=Usage of obsolete 'junit.framework.Assert'
 use.of.obsolete.assert.problem.descriptor=Call to <code>#ref()</code> from 'org.junit.framework.Assert' should be replaced with call to method from 'org.junit.Assert' #loc
 use.of.obsolete.assert.quickfix=Replace with 'org.junit.Assert' method call
