IDEA-91706 ('Serializable/Deserializable class in secure context' shall have an option to ignore throwable classes)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -2006,9 +2006,9 @@ non.final.utility.class.problem.descriptor=Utility class <code>#ref</code> is no
 0.will.have.incompatible.access.privileges.with.super.1={0} will have incompatible access privileges with super {1}
 0.will.no.longer.be.visible.from.overriding.1={0} will no longer be visible from overriding {1}
 make.private.quickfix=Make 'private'
-ignore.throwable.classes.option=Ignore 'Throwable' classes
 arrays.as.list.with.zero.or.one.argument.display.name=Call to 'Arrays.asList()' with too few arguments
 arrays.as.list.with.one.argument.problem.descriptor=Call to <code>#ref</code> with only one argument
 arrays.as.list.with.zero.arguments.problem.descriptor=Call to <code>#ref</code> with zero arguments
 arrays.as.list.with.one.argument.quickfix=Replace with call to 'Collections.singletonList()'
 arrays.as.list.with.zero.arguments.quickfix=Replace with call to 'Collections.emptyList()'
+ignore.classes.extending.throwable.option=Ignore classes extending 'Throwable'
