method refs: intention to convert method ref to lambda

--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -163,6 +163,8 @@ replace.diamond.with.explicit.type.arguments.intention.name=Replace '<>' with ex
 replace.diamond.with.explicit.type.arguments.intention.family.name=Replace Diamond with Explicit Type Arguments
 replace.lambda.with.anonymous.intention.name=Replace lambda with anonymous class
 replace.lambda.with.anonymous.intention.family.name=Replace lambda with anonymous class
+replace.method.ref.with.lambda.intention.name=Replace method reference with lambda
+replace.method.ref.with.lambda.intention.family.name=Replace method reference with lambda
 infer.lambda.parameter.type.intention.family.name=Infer lambda parameter type
 expand.one.line.lambda2.code.block.intention.family.name=Expand lambda expression body to code block
 make.public.intention.name=Make 'public'
