--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
@@ -14,7 +14,6 @@ EditorPane.inactiveBackground=535353
 EditorPane.inactiveForeground=eeeeee
 EditorPaneUI=com.intellij.ide.ui.laf.darcula.ui.DarculaEditorPaneUI
 
-
 control=535353
 
 ScrollBarUI=com.intellij.ide.ui.laf.darcula.ui.DarculaScrollBarUI
@@ -34,9 +33,10 @@ TextField.border=com.intellij.ide.ui.laf.darcula.ui.DarculaTextBorder
 PasswordField.background=aaaaaa
 
 CheckBoxUI=com.intellij.ide.ui.laf.darcula.ui.DarculaCheckBoxUI
-#ComboBoxUI=com.intellij.ide.ui.laf.darcula.ui.DarculaComboBoxUI
-ComboBox.background=eeeeee
-ComboBox.foreground=000000
+ComboBoxUI=com.intellij.ide.ui.laf.darcula.ui.DarculaComboBoxUI
+ComboBox.squareButton=false
+#ComboBox.background=eeeeee
+#ComboBox.foreground=000000
 RadioButtonUI=com.intellij.ide.ui.laf.darcula.ui.DarculaRadioButtonUI
 
 StatusBar.topColor=2c2c2c
