--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -333,3 +333,4 @@ top.level.class.maynot.have.private.modifier=Top level class may not have 'priva
 top.level.class.maynot.have.protected.modifier=Top level class may not have 'protected' modifier
 property.missing=propertyMissing
 attribute.name.expected=Attribute name expected
+java.style.for.each.statement.requires.a.type.declaration=Java-style for-each statement requires a type declaration
