Make "Convert to nested ifs" intention work on parenthesized and or-expressions and rename to "Convert to multiple 'if's"

--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -27,12 +27,12 @@ replace.while.loop.with.do.while.loop.intention.name=Replace 'while' loop with '
 replace.while.loop.with.do.while.loop.intention.family.name=Replace While Loop with Do While Loop
 replace.do.while.loop.with.while.loop.intention.name=Replace 'do while' loop with 'while' loop
 replace.do.while.loop.with.while.loop.intention.family.name=Replace Do While Loop with While Loop
-expand.boolean.intention.name=Expand boolean use to 'if else'
+expand.boolean.intention.name=Convert to 'if else'
 expand.boolean.intention.family.name=Expand Boolean
 split.else.if.intention.name=Split 'else if'
 split.else.if.intention.family.name=Split Else If
-convert.to.nested.if.intention.name=Convert to nested ifs
-convert.to.nested.if.intention.family.name=Convert to nested ifs
+convert.to.nested.if.intention.name=Convert to multiple 'if's
+convert.to.nested.if.intention.family.name=Expand Boolean to multiple ifs
 join.concatenated.string.literals.intention.name=Join concatenated String literals
 join.concatenated.string.literals.intention.family.name=Join Concatenated String Literals
 replace.switch.with.if.intention.name=Replace 'switch' with 'if'
