--- a/plugins/hg4idea/resources/org/zmlx/hg4idea/HgVcsMessages.properties
+++ b/plugins/hg4idea/resources/org/zmlx/hg4idea/HgVcsMessages.properties
@@ -115,3 +115,5 @@ hg4idea.integrate.other.head=Other head: {0}
 hg4idea.dialog.login.password.required=Login and password required
 hg4idea.dialog.login.description=Login to {0}
 hg4idea.exception.file.not.under.hg=The file {0} is not under Mercurial.
+
+hg4idea.history.copy.revision.number=Copy Revision Number
