a registry key to temporarily enable breakpoints during evaluation

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -261,3 +261,4 @@ introduce.variable.prefer.statements=false
 show.method.base.class.in.java.file.structure=true
 
 vcs.log.empty.change.list.creation=false
+debugger.enable.breakpoints.during.evaluation=false
