make foreground darker

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula/darcula.properties
@@ -1,8 +1,8 @@
 darcula.background=535353
 darcula.textBackground=535353
-darcula.foreground=eeeeee
-darcula.textForeground=eeeeee
-darcula.caretForeground=eeeeee
+darcula.foreground=cccccc
+darcula.textForeground=cccccc
+darcula.caretForeground=cccccc
 
 text=eeeeee
 
