--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/codeInspection/GroovyInspectionBundle.properties
@@ -99,3 +99,4 @@ highlight.if.groovy.object.methods.overridden=Highlight references from class ov
 highlight.if.missing.methods.declared=Highlight references from class declaring missingMethod() or missingProperty()
 gr.package.inspection.check.scripts=Check scripts
 gr.package=Package mismatch
+java.style.property.access=Java-style accessor invocation
