Improve "Confusing octal escape sequence" inspection

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1435,7 +1435,7 @@ cached.number.constructor.call.display.name=Number constructor call with primiti
 cached.number.constructor.call.problem.descriptor=Number constructor call with primitive argument <code>#ref</code> #loc
 cached.number.constructor.call.quickfix=Replace with ''{0}.valueOf()'' call
 chained.equality.comparisons.problem.descriptor=Chained equality comparison <code>#ref</code> #loc
-confusing.octal.escape.sequence.problem.descriptor=String <code>#ref</code> contains potentially confusing octal escape sequence #loc
+confusing.octal.escape.sequence.problem.descriptor=Octal escape sequence <code>#ref</code> immediately followed by digit #loc
 field.accessed.synchronized.and.unsynchronized.option=Simple getters and setters are considered field accesses too
 method.overrides.package.local.method.display.name=Method overrides package-local method of superclass located in other package
 method.overrides.package.local.method.problem.descriptor=Method <code>#ref()</code> overrides a package-local method of a superclass located in another package #loc
